--- a/_textos-css-tutorial/1-css-selectors.html
+++ b/_textos-css-tutorial/1-css-selectors.html
@@ -65,26 +65,26 @@
     </ul>
     <h1>Sobre os seletores simples nós temos:</h1>
     <h1>Element selector</h1>
-    <h2>Example:</h2>
+    <h2>Exemplo:</h2>
     <p>Tudo que estiver entre a tag p vai ficar centralizado e com cor verde</p>
     <p id="id1">Mesmo uma tag p com id (essa). Então pense bem se vai querer que a formatação vá para todos</p>
     
     <h1>ID selector</h1>
-    <h2>Example:</h2>
+    <h2>Exemplo:</h2>
     <p id="id2">Esse p aqui tem o id pré formatado e por isso não está igual aos outros</p>
     <p>Esse não tem</p>
 
     <h1>Class selector</h1>
-    <h2>Example 1 (mudando qualquer tag que tenha x class):</h2>
+    <h2>Exemplo 1 (mudando qualquer tag que tenha x class):</h2>
     <h1 class="center">Esse h1 tem uma class pré formatada, por isso está assim</h1>
-    <p class="center">Esse p tem uma class pré formatada e, como eu pedi para alterar todos que tem x class, ele também está igual ao h1, mesmo sendo de tags diferentes.</p> 
+    <p class="center">Esse p tem uma class pré formatada e, como eu pedi para alterar todos que tem "x" class, ele também está igual ao h1, mesmo sendo de tags diferentes.</p> 
     
-    <h2>Example 2 (mudando qualquer tag que tenha x class):</h2>
+    <h2>Exemplo 2 (mudando qualquer tag que tenha "x" class):</h2>
     <h3 class="center2">Eu tenho a mesma class que p, mas não fui escolhido, por isso estou diferente</h3>
     <p class="center2">This paragraph will be goldenrod and center-aligned.</p>
 
-    <h2>Example 3 (mudando tags com 1 e 2 class):</h2>
-    <h2 id="center">Todos as tags a seguir tem a class center3, mas só a última tem a class large também, separado por um espaço.</h2>
+    <h2>Exemplo 3 (mudando tags com 1 a 2 class):</h2>
+    <h2 id="center">Todos as tags a seguir tem a class "center3", mas só a última tem a class "large" também, separado por um espaço.</h2>
     <h1 class="center3">This heading will not be affected</h1>
     <p class="center3">This paragraph will be orange and center-aligned.</p>
     <p class="center3 large">This paragraph will be orange, center-aligned, and in a large font-size.</p>
