--- a/_textos-css-tutorial/2-how-to-add-css.html
+++ b/_textos-css-tutorial/2-how-to-add-css.html
@@ -31,7 +31,7 @@
     <p>Serve para quando você já tem um CSS pronto que vai servir para várias páginas, ele ficará fora do documento, num arquivo a parte. Para usá-lo link o seu arquivo HTML ao do CSS colocando dentro da tag: link rel="stylesheet" href="caminho-onde-esta-o-arquivo-css".</p>
     <p>O text-indent, o tamanho das letras, a cor de fundo e a font-family foram definidas num arquivo fora daqui. Lá não terão tags, somente seletores e blocos de declaração</p>
     <h1>Internal CSS</h1>
-    <p>Nesse caso a formatação fica dentro da tag style que fica dentro da tag head. Eu mudei o símbolo das listas dentro desse documento.</p>
+    <p>Nesse caso a formatação fica dentro da tag style que fica dentro da tag head. Eu mudei os símbolos das listas dentro desse documento.</p>
     <h1>Inline CSS</h1>
     <p>Nesse caso você vai colocar uma formatação para uma tag <span style="color: royalblue;">específica</span> usando o parâmetro <span style="font-weight: bold;">style</span> dentro da tag.</p>
     <h1>Multiple Style Sheets</h1>
