--- a/_textos-css-tutorial/5-css-background-image-repeat.html
+++ b/_textos-css-tutorial/5-css-background-image-repeat.html
@@ -10,27 +10,26 @@
 <body>
     <h1>CSS background-repeat</h1>
     <p>Por padrão, caso a imagem colocada como fundo não consiga ocupa-lo por completo, ela irá repetir a imagem verticalmente e horizontalmente para que ocupe.</p>
-    <div style="background-image: url(../_imagens/fundo.jpg); background-repeat: repeat-x;">
+    <div style="background-image: url(../_imagens/fundo.jpg)">
         <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <p>Você pode fazer a imagem ser repetida apenas verticalmente ou apenas horizontalmente usando "background-repeat: x;" para apenas horizontalmente.
         <br/>
         <br/>
         <br/>
         <br/>
         <br/>
     </div>
-
+    <p>Você pode fazer a imagem ser repetida apenas verticalmente ou apenas horizontalmente usando "background-repeat: x;" para apenas horizontalmente.
+    <div style="background-image: url(../_imagens/fundo.jpg); background-repeat: repeat-x;">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+    </div>
+    <p>Ou usar "background-repeat: y;" para apenas verticalmente.</p>
     <div style="background-image: url(../_imagens/fundo.jpg); background-repeat: repeat-y;">
         <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <p>Ou usar "background-repeat: y;" para apenas verticalmente.</p>
         <br/>
         <br/>
         <br/>
