--- a/_textos-css-tutorial/5-css-backgrounds.html
+++ b/_textos-css-tutorial/5-css-backgrounds.html
@@ -10,7 +10,7 @@
 <body>
     <h1>background-color</h1>
     <p>Usando background-color você muda o fundo de uma página.</p>
-    <p>Exemplo: essa página tem essa cor porque tem isso na stylesheet: background-color: azure;</p>
+    <p>Exemplo: essa página tem essa cor porque tem isso na stylesheet: "background-color: azure;".</p>
     <p style="background-color: cadetblue">Esse parâmetro pode ser usado para qualquer elemento do HTML, esse aqui é um exemplo.</p>
     <p style="background-color: cadetblue; opacity: 0.6">Que tal adicionar um pouco de transparência? Use "opacity: x;"</p>
     <p style="background-color: cadetblue; opacity: 0.4">"Mas cuidado para não adicionar demais, fica ruim de ler</p>
