--- a/_textos-css-tutorial/3-css-comments.html
+++ b/_textos-css-tutorial/3-css-comments.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <!-- Os parágrafos a seguir terão letras de tamanho igual a 14pt -->
+    <h1>CSS Comments</h1>
     <p>Você pode adicionar um comentário no seu código CSS só para organizar, ele será ignorado pelos browsers.</p>
     <p>Para fazer isso basta colocar o que você deseja entre /* */</p>
     <p>Você também pode colocar comentários no HTML, basta digitar !-- -->, coloque uma abertura de tag ao lado do ! Eu não sei como fazer o browser entender que eu quero que apareça o que digitei e não que é uma tag.</p>
