CSS Border Color
Informações sobre cores de bordas no CSS.
Interessante:
- Para definir a cor de carda lado da borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-color: ;".
- Aparentemente as bordas do lado direito e esquerdo são um trapézio.

--- a/_textos-css-tutorial/6-css-border-width.html
+++ b/_textos-css-tutorial/6-css-border-width.html
@@ -68,7 +68,7 @@
     <h2 id="quatro">medium</h2>
 
     <h1>Specific Side Widths</h1>
-    <p>Você pode querer alterar a largura de cada borda, para isso coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-width: ;".</p>
+    <p>Para definir a largura de cada borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-width: ;".</p>
     <p>Se você colocar somente dois valores, ele vai entender como o primeiro sendo para o topo e para baixo e o segundo como para a esquerda e para a direita.</p>
     <h2 id="cinco">Texto</h2>
     <h2 id="seis">Texto</h2>
