CSS Border Sides
Informações sobre os lados das bordas no CSS.
Interessante:
REGRA GERAL
- Se tiver 4 valores 	--> cima, direita, baixo, esquerda;>
- Se tiver 3 valores --> cima, direita e esquerda, baixo;
- Se tiver 2 valores --> cima e baixo, direita e esquerda;
- Se tiver 1 valor --> todos os lados serão iguais.

--- a/_textos-css-tutorial/6-css-border-color.html
+++ b/_textos-css-tutorial/6-css-border-color.html
@@ -55,4 +55,11 @@
     <h2 id="quatro">Texto</h2>
     <h2 id="cinco">Texto</h2>
     <p>Aparentemente as bordas do lado direito e esquerdo são um trapézio.</p>
+    <h1>Regra geral:</h1>
+    <ul type="circle">
+        <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
+        <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
+        <li>Se tiver 2 valores 	&rarr; cima e baixo, direita e esquerda;</li>
+        <li>Se tiver 1 valor 	&rarr; todos os lados serão iguais.</li>
+    </ul>
 </html>
