--- a/_textos-css-tutorial/6-css-border-width.html
+++ b/_textos-css-tutorial/6-css-border-width.html
@@ -74,5 +74,12 @@
     <h2 id="seis">Texto</h2>
     <h2 id="sete">Texto</h2>
     <h2 id="oito">Texto</h2>
+    <h1>Regra geral:</h1>
+    <ul type="circle">
+        <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
+        <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
+        <li>Se tiver 2 valores 	&rarr; cima e baixo, direita e esquerda;</li>
+        <li>Se tiver 1 valor 	&rarr; todos os lados serão iguais.</li>
+    </ul>
 </body>
 </html>
