--- a/_textos-css-tutorial/4-css-colors-hex.html
+++ b/_textos-css-tutorial/4-css-colors-hex.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
         h2 {
             text-align: center; 
@@ -14,22 +15,26 @@
     </style>
 </head>
 <body>
-    <h1>HEX</h1>
-    <p>HEX vem de hexadecimal e tem como padrão: #RRGGBB RR(Red) GG(Green) BB(Blue)</p>
-    <p>Os valores são entre 00 e ff que é o mesmo que 0 a 255, logo, se você colocar #ff0000 como cor, aparecerá vermelho.</p>
-    <p>Para mostrar preto coloque todos os valores iguais a 0.</p>
-    <p>Para mostrar preto coloque todos os valores iguais a ff.</p>
-    <h2 style="background-color:#ff0000;">#ff0000</h2>
-    <h2 style="background-color:#0000ff;">#0000ff</h2>
-    <h2 style="background-color:#ffa500;">#ffa500</h2>
-    <p>Os tons de cinza também podem ser definidos aqui utilizando o mesmo valor para as 3 variáveis.</p>
-    <h2 style="background-color:#3c3c3c;">#3c3c3c</h2>
-    <h2 style="background-color:#616161;">#616161</h2>
-    <h2 style="background-color:#787878;">#787878</h2>
-    <h2 style="background-color:#b4b4b4;">#b4b4b4</h2>
-    <h2 style="background-color:#f0f0f0;">#f0f0f0</h2>
-    <p>Em alguns casos você verá esse código ser encurtado para 3 dígitos, isso só ocorre quando os valores estão em pares, tipo: #00ffcc, pode ser escrito como #0fc.</p>
-    <h2 style="background-color:#b58;">#b58 = #bb5588</h2>
-    <h2 style="background-color:#fc9;">#fc9 = #ffcc99</h2>
+    <div id="link">
+        <div id="explicacao">
+            <h1>HEX</h1>
+            <p>HEX vem de hexadecimal e tem como padrão: #RRGGBB RR(Red) GG(Green) BB(Blue)</p>
+            <p>Os valores são entre 00 e ff que é o mesmo que 0 a 255, logo, se você colocar #ff0000 como cor, aparecerá vermelho.</p>
+            <p>Para mostrar preto coloque todos os valores iguais a 0.</p>
+            <p>Para mostrar preto coloque todos os valores iguais a ff.</p>
+            <h2 style="background-color:#ff0000;">#ff0000</h2>
+            <h2 style="background-color:#0000ff;">#0000ff</h2>
+            <h2 style="background-color:#ffa500;">#ffa500</h2>
+            <p>Os tons de cinza também podem ser definidos aqui utilizando o mesmo valor para as 3 variáveis.</p>
+            <h2 style="background-color:#3c3c3c;">#3c3c3c</h2>
+            <h2 style="background-color:#616161;">#616161</h2>
+            <h2 style="background-color:#787878;">#787878</h2>
+            <h2 style="background-color:#b4b4b4;">#b4b4b4</h2>
+            <h2 style="background-color:#f0f0f0;">#f0f0f0</h2>
+            <p>Em alguns casos você verá esse código ser encurtado para 3 dígitos, isso só ocorre quando os valores estão em pares, tipo: #00ffcc, pode ser escrito como #0fc.</p>
+            <h2 style="background-color:#b58;">#b58 = #bb5588</h2>
+            <h2 style="background-color:#fc9;">#fc9 = #ffcc99</h2>
+        </div>
+    </div>
 </body>
 </html>
