--- a/_textos-css-tutorial/5-css-backgrounds.html
+++ b/_textos-css-tutorial/5-css-backgrounds.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Backgrounds</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
 </head>
 <body>
-    <h1>background-color</h1>
-    <p>Usando background-color você muda o fundo de uma página.</p>
-    <p>Exemplo: essa página tem essa cor porque tem isso na stylesheet: "background-color: azure;".</p>
-    <p style="background-color: cadetblue">Esse parâmetro pode ser usado para qualquer elemento do HTML, esse aqui é um exemplo.</p>
-    <p style="background-color: cadetblue; opacity: 0.6">Que tal adicionar um pouco de transparência? Use "opacity: x;"</p>
-    <p style="background-color: cadetblue; opacity: 0.4">"Mas cuidado para não adicionar demais, fica ruim de ler</p>
-    <p style="background-color: rgba(95, 158, 160, 0.4)">Usando RGBA não tem problema não.</p>
+    <div id="link">
+        <div id="explicacao">
+            <h1>background-color</h1>
+            <p>Usando background-color você muda o fundo de uma página.</p>
+            <p>Exemplo: essa página tem essa cor porque tem isso na stylesheet: "background-color: azure;".</p>
+            <p style="background-color: cadetblue">Esse parâmetro pode ser usado para qualquer elemento do HTML, esse aqui é um exemplo.</p>
+            <p style="background-color: cadetblue; opacity: 0.6">Que tal adicionar um pouco de transparência? Use "opacity: x;"</p>
+            <p style="background-color: cadetblue; opacity: 0.4">"Mas cuidado para não adicionar demais, fica ruim de ler</p>
+            <p style="background-color: rgba(95, 158, 160, 0.4)">Usando RGBA não tem problema não.</p>
+        </div>
+    </div>
 </body>
 </html>
