--- a/_textos-css-tutorial/6-css-border-width.html
+++ b/_textos-css-tutorial/6-css-border-width.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Border Width</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
         h2 {
             padding: 5px;
@@ -58,28 +59,32 @@
     </style>
 </head>
 <body>
-    <h1>CSS Border Width</h1>
-    <p>Você pode alterar a largura da borda usando "border-width: ;".</p>
-    <p>Para isso você pode colocar os valores em in, px, pt, cm, em, etc.</p>
-    <p>Além dos valores citados anteriormente, você pode colocar alguns já predeterminados, esses são: thin, medium and thick.</p>
-    <h2 id="um">10px</h2>
-    <h2 id="dois">thick</h2>
-    <h2 id="tres">8pt</h2>
-    <h2 id="quatro">medium</h2>
+    <div id="link">
+        <div id="explicacao">
+            <h1>CSS Border Width</h1>
+            <p>Você pode alterar a largura da borda usando "border-width: ;".</p>
+            <p>Para isso você pode colocar os valores em in, px, pt, cm, em, etc.</p>
+            <p>Além dos valores citados anteriormente, você pode colocar alguns já predeterminados, esses são: thin, medium and thick.</p>
+            <h2 id="um">10px</h2>
+            <h2 id="dois">thick</h2>
+            <h2 id="tres">8pt</h2>
+            <h2 id="quatro">medium</h2>
 
-    <h1>Specific Side Widths</h1>
-    <p>Para definir a largura de cada borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-width: ;".</p>
-    <p>Se você colocar somente dois valores, ele vai entender como o primeiro sendo para o topo e para baixo e o segundo como para a esquerda e para a direita.</p>
-    <h2 id="cinco">Texto</h2>
-    <h2 id="seis">Texto</h2>
-    <h2 id="sete">Texto</h2>
-    <h2 id="oito">Texto</h2>
-    <h1>Regra geral:</h1>
-    <ul type="circle">
-        <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
-        <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
-        <li>Se tiver 2 valores 	&rarr; cima e baixo, direita e esquerda;</li>
-        <li>Se tiver 1 valor 	&rarr; todos os lados serão iguais.</li>
-    </ul>
+            <h1>Specific Side Widths</h1>
+            <p>Para definir a largura de cada borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-width: ;".</p>
+            <p>Se você colocar somente dois valores, ele vai entender como o primeiro sendo para o topo e para baixo e o segundo como para a esquerda e para a direita.</p>
+            <h2 id="cinco">Texto</h2>
+            <h2 id="seis">Texto</h2>
+            <h2 id="sete">Texto</h2>
+            <h2 id="oito">Texto</h2>
+            <h1>Regra geral:</h1>
+            <ul type="circle">
+                <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
+                <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
+                <li>Se tiver 2 valores 	&rarr; cima e baixo, direita e esquerda;</li>
+                <li>Se tiver 1 valor 	&rarr; todos os lados serão iguais.</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
