--- a/_textos-css-tutorial/6-css-shorthand-border-property.html
+++ b/_textos-css-tutorial/6-css-shorthand-border-property.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Shorthand Border Property</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
         h2#um {
             border: 5px solid steelblue;
@@ -35,13 +36,17 @@
     </style>
 </head>
 <body>
-    <h1>CSS Border - Shorthand Property</h1>
-    <p>Assim como o background, você pode encurtar o código usando "border: ;". Nela você sempre deve especificar o estilo da borda, caso contrário, não irá funcionar.</p>
-    <h2 id="um">border: 5px solid steelblue;</h2>
-    <p>Você também pode escolher só um lado, para isso adicione "-lado", exemplo: "border-bottom: ;".</p>
-    <h2 id="dois">Top</h2>
-    <h2 id="quatro">Left</h2>
-    <h2 id="cinco">Right</h2>
-    <h2 id="tres">Bottom</h2>
+    <div id="link">
+        <div id="explicacao">
+            <h1>CSS Border - Shorthand Property</h1>
+            <p>Assim como o background, você pode encurtar o código usando "border: ;". Nela você sempre deve especificar o estilo da borda, caso contrário, não irá funcionar.</p>
+            <h2 id="um">border: 5px solid steelblue;</h2>
+            <p>Você também pode escolher só um lado, para isso adicione "-lado", exemplo: "border-bottom: ;".</p>
+            <h2 id="dois">Top</h2>
+            <h2 id="quatro">Left</h2>
+            <h2 id="cinco">Right</h2>
+            <h2 id="tres">Bottom</h2>
+        </div>
+    </div>
 </body>
 </html>
