--- a/_textos-css-tutorial/3-css-comments.html
+++ b/_textos-css-tutorial/3-css-comments.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <title>CSS Comments</title>
     <style>
         /* Isso é um comentário */
@@ -17,10 +18,14 @@
     </style>
 </head>
 <body>
-    <!-- Os parágrafos a seguir terão letras de tamanho igual a 14pt -->
-    <h1>CSS Comments</h1>
-    <p>Você pode adicionar um comentário no seu código CSS só para organizar, ele será ignorado pelos browsers.</p>
-    <p>Para fazer isso basta colocar o que você deseja entre /* */</p>
-    <p>Você também pode colocar comentários no HTML, basta digitar !-- -->, coloque uma abertura de tag ao lado do ! Eu não sei como fazer o browser entender que eu quero que apareça o que digitei e não que é uma tag.</p>
+    <div id="link">
+        <div id="explicacao">
+            <!-- Os parágrafos a seguir terão letras de tamanho igual a 14pt -->
+            <h1>CSS Comments</h1>
+            <p>Você pode adicionar um comentário no seu código CSS só para organizar, ele será ignorado pelos browsers.</p>
+            <p>Para fazer isso basta colocar o que você deseja entre /* */</p>
+            <p>Você também pode colocar comentários no HTML, basta digitar !-- -->, coloque uma abertura de tag ao lado do ! Eu não sei como fazer o browser entender que eu quero que apareça o que digitei e não que é uma tag.</p>
+        </div>
+    </div>
 </body>
 </html>
