--- a/_textos-css-tutorial/5-css-background-attachment.html
+++ b/_textos-css-tutorial/5-css-background-attachment.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Background Attachment</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
         body {
             background-image: url(../_imagens/link-minish-cap.png);
             background-repeat: no-repeat;
             background-position: right top;
             background-attachment: fixed;
+            position: relative;
         }
         
+        div#explicacao {
+            background-image: url(../_imagens/link-minish-cap.png);
+            background-repeat: no-repeat;
+            background-position: right top;
+            background-attachment: fixed;
+        }
+
         div#chuchu{
             background-image: url(../_imagens/chuchu.png);
             background-repeat: no-repeat;
@@ -31,96 +40,90 @@
 </head>
 <body>
     <div id="chuchu">
-        <h1>CSS background-attachment</h1>
-        <p>Em alguns casos você pode querer que uma imagem acompanhe a sua scrollagem <br/>ou que ela fique lá onde estava, para mexer nisso você <br/> deve usar "background-attachment".</p>
-        <p>Quando você coloca "background-attachment: fixed;" a imagem fica como o Link.</p>
-        <p>Quando você coloca "background-attachment: scroll;" a imagem fica como o Chuchu <br/> e a chave.</p>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/> 
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/> 
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/> 
         <div id="chave">
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/> 
+            <div id="explicacao">
+                <h1>CSS background-attachment</h1>
+                <p>Em alguns casos você pode querer que uma imagem acompanhe <br/>a sua scrollagem ou que ela fique lá onde estava, para mexer nisso você <br/> deve usar "background-attachment".</p>
+                <p>Quando você coloca "background-attachment: fixed;" <br/>a imagem fica como o Link.</p>
+                <p>Quando você coloca "background-attachment: scroll;" <br/>a imagem fica como o Chuchu e a chave.</p>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/> 
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/> 
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/> 
+            </div>
         </div>
     </div>
 </body>
