--- a/_textos-css-tutorial/5-css-background-image.html
+++ b/_textos-css-tutorial/5-css-background-image.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS background-image</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
         body {
             background-image: url(../_imagens/fundo.jpg);
@@ -17,9 +18,13 @@
     </style>
 </head>
 <body>
-    <h1>CSS background-image</h1>
-    <p>Usando "background-image" você selecionará uma imagem para colocar no fundo.</p>
-    <p>Por padrão a imagem irá se repetir para preencher o fundo todo, caso a imagem não tenha tamanho para fazer isso.</p>
-    <p>Use url() para escolher a imagem.</p>
+    <div id="link">
+        <div id="explicacao">
+            <h1>CSS background-image</h1>
+            <p>Usando "background-image" você selecionará uma imagem para colocar no fundo.</p>
+            <p>Por padrão a imagem irá se repetir para preencher o fundo todo, caso a imagem não tenha tamanho para fazer isso.</p>
+            <p>Use url() para escolher a imagem.</p>
+        </div>
+    </div>
 </body>
 </html>
