--- a/_textos-css-tutorial/6-css-border-color.html
+++ b/_textos-css-tutorial/6-css-border-color.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Border Color</title>
-    <link rel="stylesheet" href="../_css/how-to-add-css.css"/>;
+    <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
         h2 {
             text-align: center;
@@ -43,23 +44,28 @@
     </style>
 </head>
 <body>
-    <h1>CSS Border Color</h1>
-    <p>Para definir a cor de uma borda use: "border-color: ;".</p>
-    <p>Você pode selecionar utilizando todos os tipos de definição de cores que você viu até agora.</p>
-    <p>Se você não selecionar uma cor, ele vai pegar a cor do elemento.</p>
-    <h2 id="um">Texto</h2>
-    <h2 id="dois">Texto</h2>
-    <h2 id="tres" style=" color:steelblue">Não escolhi a cor da borda, logo, ele pegou a do texto.</h2>
-    <h1>CSS Specific Side Colors</h1>
-    <p>Para definir a cor de carda lado da borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-color: ;".</p>
-    <h2 id="quatro">Texto</h2>
-    <h2 id="cinco">Texto</h2>
-    <p>Aparentemente as bordas do lado direito e esquerdo são um trapézio.</p>
-    <h1>Regra geral:</h1>
-    <ul type="circle">
-        <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
-        <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
-        <li>Se tiver 2 valores 	&rarr; cima e baixo, direita e esquerda;</li>
-        <li>Se tiver 1 valor 	&rarr; todos os lados serão iguais.</li>
-    </ul>
+    <div id="link">
+        <div id="explicacao">
+            <h1>CSS Border Color</h1>
+            <p>Para definir a cor de uma borda use: "border-color: ;".</p>
+            <p>Você pode selecionar utilizando todos os tipos de definição de cores que você viu até agora.</p>
+            <p>Se você não selecionar uma cor, ele vai pegar a cor do elemento.</p>
+            <h2 id="um">Texto</h2>
+            <h2 id="dois">Texto</h2>
+            <h2 id="tres" style=" color:steelblue">Não escolhi a cor da borda, logo, ele pegou a do texto.</h2>
+            <h1>CSS Specific Side Colors</h1>
+            <p>Para definir a cor de carda lado da borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-color: ;".</p>
+            <h2 id="quatro">Texto</h2>
+            <h2 id="cinco">Texto</h2>
+            <p>Aparentemente as bordas do lado direito e esquerdo são um trapézio.</p>
+            <h1>Regra geral:</h1>
+            <ul type="circle">
+                <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
+                <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
+                <li>Se tiver 2 valores 	&rarr; cima e baixo, direita e esquerda;</li>
+                <li>Se tiver 1 valor 	&rarr; todos os lados serão iguais.</li>
+            </ul>
+        </div>
+    </div>
+</body>
 </html>
