--- a/_textos-css-tutorial/6-css-borders.html
+++ b/_textos-css-tutorial/6-css-borders.html
@@ -17,6 +17,7 @@
             font-weight: bold;
             color: midnightblue;
         }
+
         h2.dotted {border-style: dotted;}
         h2.dashed {border-style: dashed;}
         h2.solid {border-style: solid;}
@@ -45,12 +46,12 @@
                 <li><span>dotted</span> - Cria uma borda pontilhada;</li>
                 <li><span>dashed</span> - Cria uma borda tracejada;</li>
                 <li><span>solid</span> - Cria uma borda sólida;</li>
-                <li><span>double</span> - Cria uma borda dupla</li>
-                <li><span>groove</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade.</li>
-                <li><span>ridge</span> - Cria uma borda 3D em que a borda superior esquerda assumirá a cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade.</li>
-                <li><span>inset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda.</li>
-                <li><span>outset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom a cor selecionada. O efeito depende da cor da borda.</li>
-                <li><span>none</span> - O elemento fica sem borda</li>
+                <li><span>double</span> - Cria uma borda dupla;</li>
+                <li><span>groove</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade;</li>
+                <li><span>ridge</span> - Cria uma borda 3D em que a borda superior esquerda assumirá a cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade;</li>
+                <li><span>inset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda;</li>
+                <li><span>outset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom a cor selecionada. O efeito depende da cor da borda;</li>
+                <li><span>none</span> - O elemento fica sem borda;</li>
                 <li><span>hidden</span> - Cria uma borda escondida. Não sei bem pra que serve.</li>
             </ul>
             <p>Veja os exemplos a seguir:</p>
