CSS Outline Width, Color, Shorthand and Offset
Informações sobre contorno no CSS.
Nesse caso, decidi colocar tudo no mesmo arquivo, talvez eu faça isso com os outros.

--- a/_textos-css-tutorial/6-css-border-color.html
+++ b/_textos-css-tutorial/6-css-border-color.html
@@ -41,6 +41,12 @@
             border-width: 10px;
             border-color: lightblue lightcoral lightcyan lightgoldenrodyellow;
         }
+
+        h2#seis {
+            border-style: solid;
+            border-width: 10px;
+            border-color: transparent lightcoral lightcyan lightgoldenrodyellow;
+        }
     </style>
 </head>
 <body>
@@ -48,7 +54,7 @@
         <div id="explicacao">
             <h1>CSS Border Color</h1>
             <p>Para definir a cor de uma borda use: "border-color: ;".</p>
-            <p>Você pode selecionar utilizando todos os tipos de definição de cores que você viu até agora.</p>
+            <p>Você pode selecionar utilizando todos os tipos de definição de cores que você viu até agora e também pode colocar a borda como transparente.</p>
             <p>Se você não selecionar uma cor, ele vai pegar a cor do elemento.</p>
             <h2 id="um">Texto</h2>
             <h2 id="dois">Texto</h2>
@@ -57,6 +63,7 @@
             <p>Para definir a cor de carda lado da borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-color: ;".</p>
             <h2 id="quatro">Texto</h2>
             <h2 id="cinco">Texto</h2>
+            <h2 id="seis">Texto</h2>
             <p>Aparentemente as bordas do lado direito e esquerdo são um trapézio.</p>
             <h1>Regra geral:</h1>
             <ul type="circle">
