--- a/_textos-css-tutorial/11-css-outline.html
+++ b/_textos-css-tutorial/11-css-outline.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,17 @@
             margin: 15px 20px 30px 20px;
         }
 
+        h3#um{
+            outline: 5px midnightblue solid;
+            outline-offset: 10px;
+            margin-bottom: 50px;
+        }
+
+        h3#dois{
+            outline: 10px midnightblue solid;
+            outline-offset: 15px;
+        }
+
         h3.dotted {outline-style: dotted;}
         h3.dashed {outline-style: dashed;}
         h3.solid {outline-style: solid;}
@@ -71,6 +82,16 @@
                 <li>outline-offset</li>
                 <li>outline</li>
             </ul>
+            <h1>CSS Outline Width</h1>
+            <p>A propriedade "outline-width: ;" pode ter os valores a seguir:</p>
+            <ul type="circle">
+                <li>thin (geralmente 1 px);</li>
+                <li>medium (geralmente 3 px);</li>
+                <li>thick (geralmente 5 px);</li>
+                <li>Uma tamanho específico (in, px, pt, cm, etc.).</li>
+            </ul>
+            <h1>CSS Outline Color</h1>
+            <p>A propriedade "outline-color: ;" pode ter como valores todos os tipos de definição de cores que você viu até agora e também tem a opção "invert", que serve para garantir que a cor do contorno seja visível independentemente da cor do fundo.</p>
             <h1>CSS Outline Style</h1>
             <p>Para mudar o estilo do contorno use "outline-style: ;".</p>
             <p>Ele pode assumir os seguintes valores:</p>
@@ -96,6 +117,17 @@
             <h3 class="inset">An inset outline with a olivedrab border.</h3>
             <h3 class="outset">An outset outline with a olivedrab border.</h3>
             <p>Se você não usar "outline-style: ;" ou ao menos selecionar esse parâmetro, as outras formatações de contorno não funcionarão.</p>
+            <h1>CSS Outline Shorthand</h1>
+            <p>Você pode encurtar o código de contorno usando "outline: ;", você deve selecionar alguns dos valores a seguir (a ordem não importa):</p>
+            <ul type="circle">
+                <li>outline-width;</li>
+                <li>outline-style (necessário);</li>
+                <li>outline-color.</li>
+            </ul>
+            <h1>CSS Outline Offset</h1>
+            <p>A propriedade "outline-offset: ;" adiciona espaço entre o contorno e a borda externa. Esse espaço será transparente.</p>
+            <h3 id="um">Offset de 10px. Tive que colocar 50px de margin-bottom para o elemento de baixo não me sobrepor.</h3>
+            <h3 id="dois">Offset de 15px.</h3>
         </div>
     </div>
 </body>
