--- a/_textos-css-tutorial/15-css-fonts.html
+++ b/_textos-css-tutorial/15-css-fonts.html
@@ -12,34 +12,29 @@
             font-weight: bold;
         }
 
-        p.one {
-            font-family: 'Arial', sans-serif;
+        div.examples p {
             font-size: 16pt;
             text-align: center;
+        }
+
+        p.one {
+            font-family: 'Arial', sans-serif;
         }
 
         p.two {
             font-family: 'Times New Roman', Times, serif;
-            font-size: 16pt;
-            text-align: center;
         }
 
         p.three {
             font-family: 'Courier New', Courier, monospace;
-            font-size: 16pt;
-            text-align: center;
         }
 
         p.four {
-            font-family: cursive;
-            font-size: 16pt;
-            text-align: center;
+            font-family: 'Brush Script MT', cursive;
         }
 
         p.five {
             font-family: fantasy;
-            font-size: 16pt;
-            text-align: center;
         }
     </style>
 </head>
@@ -48,7 +43,7 @@
         <div id="explicacao">
             <h1>CSS Fonts</h1>
             <p>É importante ter uma boa escolha de fonte e de suas propriedades como cor e tamanho.</p>
-            <h1>Generic Font Families</h1>
+            <h1>Generic Font Families and Commonly Used Font Fallbacks</h1>
             <p>No CSS temos 5 famílias de fontes genéricas:</p>
             <ul type="circle">
                 <li><span>Serif</span> - As fontes terão um traço na borda de cada letra. Cria uma impressão de formalidade e elegância;</li>
@@ -64,13 +59,15 @@
             <p>Obs.: Nos computadores, as fontes serif são mais fáceis de ler.</p>
             <h1>The CSS font-family Property</h1>
             <p>Para escolher a fonte use "font-family: ;". Comece colocando a fonte que deseja e em seguida coloque uma fonte de família genérica, para o caso do navegador não ter a que você selecionou. Aparentemente essa precaução de ter dar ao navegador opções de fontes para usar é chamada de "fallback".</p>
-            <p>Obs.: Se o nome da fonte for maior que uma palavra, coloque-a entre aspas.</p>
+            <p>Obs.: Se o nome da fonte for maior que uma palavra, coloque-a entre aspas simples.</p>
             <h1>Some Font Examples</h1>
-            <p class="one">Minha fonte é da família sans-serif! E o nome de minha fonte é "Arial"!</p>
-            <p class="two">Minha fonte é da família serif! E o nome de minha fonte é "Times New Roman"!</p>
-            <p class="three">Minha fonte é da família monospace! E o nome de minha fonte é "Courier New"!</p>
-            <p class="four">Minha fonte é da família cursive!</p>
-            <p class="five">Minha fonte é da família fantasy!</p>
+            <div class="examples">
+                <p class="one">Minha fonte é da família sans-serif! E o nome de minha fonte é "Arial"!</p>
+                <p class="two">Minha fonte é da família serif! E o nome de minha fonte é "Times New Roman"!</p>
+                <p class="three">Minha fonte é da família monospace! E o nome de minha fonte é "Courier New"!</p>
+                <p class="four">Minha fonte é da família cursive! E o nome de minha fonte é Brush Script MT!</p>
+                <p class="five">Minha fonte é da família fantasy!</p>
+            </div>
         </div>
     </div>
 </body>
