--- a/_textos-css-tutorial/11-css-outline-color.html
+++ b/_textos-css-tutorial/11-css-outline-color.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Outline Color</title>
+    <title>CSS Text</title>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <style>
